Commiting a lot more

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>sth-select • sample</title>
+	<link rel="stylesheet" href="./src/sth-select.css"/>
 </head>
 <body>
 	<form>
@@ -10,12 +11,13 @@
 		<select 
 			name="person" 
 			sth-select
-			sth-select-title="Select a person:">
-			<option>Stanley</option>
-			<option>Isabella</option>
-			<option>Luiz</option>
-			<option>Reubert</option>
-			<option>Pedro</option>
+			sth-select-title="Select a person:"
+			sth-select-placeholder="No person select">
+			<option value="1">Stanley</option>
+			<option value="2">Isabella</option>
+			<option value="3">Luiz</option>
+			<option value="4">Reubert</option>
+			<option value="5">Pedro</option>
 		</select>
 	</form>
 
