--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 	<meta charset="utf-8">
 	<title>sth-select • sample</title>
 	<link rel="stylesheet" href="./src/sth-select.css"/>
+	<link rel="stylesheet" href="./src/sth-overlay.css"/>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans"/>
+
+	<style type="text/css">
+		body {
+			font-family: "Open Sans", sans-serif;
+			font-size: 15px;
+		}
+	</style>
 </head>
 <body>
 	<form>
