(1) Changed styles; (2) Added arrow to the select; (3) Added autoSize option

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>sth-select • sample</title>
 	<link rel="stylesheet" href="./src/sth-select.css"/>
 	<link rel="stylesheet" href="./src/sth-overlay.css"/>
+	<link rel="stylesheet" href="./src/example.css"/>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans"/>
 
 	<style type="text/css">
@@ -21,7 +22,8 @@
 			name="person" 
 			sth-select
 			sth-select-title="Select a person:"
-			sth-select-placeholder="No person select">
+			sth-select-placeholder="No person select"
+			sth-select-autosize="false">
 			<option value="1">Stanley</option>
 			<option value="2">Isabella</option>
 			<option value="3">Luiz</option>
