Converted to the Gulp instead of Webpack

--- a/example/example.html
+++ b/example/example.html
@@ -3,9 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>sth-select • sample</title>
-	<link rel="stylesheet" href="./src/sth-select.css"/>
-	<link rel="stylesheet" href="./src/sth-overlay.css"/>
-	<link rel="stylesheet" href="./src/example.css"/>
+	<base href="../" />
+	<link rel="stylesheet" href="dist/css/sth-select.css"/>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans"/>
 
 	<style type="text/css">
@@ -32,6 +31,7 @@
 		</select>
 	</form>
 
-	<script src="dist/sth-select.js"></script>
+	<script src="dist/js/vendor.js"></script>
+	<script src="dist/js/sth-select.js"></script>
 </body>
 </html>
