Added title property

--- a/example/example.html
+++ b/example/example.html
@@ -5,6 +5,7 @@
 	<title>sth-select • sample</title>
 	<base href="../" />
 	<link rel="stylesheet" href="dist/css/sth-select.css"/>
+	<link rel="stylesheet" href="example/example.css"/>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans"/>
 
 	<style type="text/css">
