(1) Added viewport properties; (2) Removed highlight color applied to mobile devices on touch

--- a/example/example.html
+++ b/example/example.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
 	<title>sth-select • sample</title>
 	<base href="../" />
 	<link rel="stylesheet" href="dist/css/sth-select.css"/>
@@ -29,6 +30,12 @@
 			<option value="3">Luiz</option>
 			<option value="4">Reubert</option>
 			<option value="5">Pedro</option>
+			<option value="6">Otávio</option>
+			<option value="7">Luís Carlos</option>
+			<option value="8">Gabriel</option>
+			<option value="9">Matheus</option>
+			<option value="5">Bruno</option>
+			<option value="5">Lorraine</option>
 		</select>
 	</form>
 
