#setItems does not exist anymore :

--- a/example/example.html
+++ b/example/example.html
@@ -27,6 +27,7 @@
 			<div class="row">
 				<label for="simplest">Simplest</label>
 				<select 
+					id="simplest"
 					name="simplest"
 					sth-select
 					sth-select-title="Select an item"
@@ -43,6 +44,7 @@
 			<div class="row">
 				<label for="with-filter">With filter</label>
 				<select 
+					id="with-filter"
 					name="with-filter"
 					sth-select
 					sth-select-title="Select an item"
